【修改】修改了魏老师的登陆页面
使用了bootstroap框架

--- a/WebContent/register.xhtml
+++ b/WebContent/register.xhtml
@@ -28,7 +28,7 @@
  	    	<h:outputText value="重复密码："/> <h:inputSecret id="pwda" value="#{userBean.pwda}"
 											required="true"
 											validator="#{userBean.validate}"/>
- 	    	<h:outputText value="家乡："/>	<h:inputText id="home" value="#{userBean.home}"/>
+ 	    	<h:outputText value="籍贯："/>	<h:inputText id="home" value="#{userBean.home}"/>
  	    	<h:outputText value="学校："/>	<h:inputText id="school" value="#{userBean.school}"/>
  	    	<h:outputText value="身份证号："/><h:inputText id="id" value="#{userBean.id}"/>
  	    	
