【资源】添加了以font形式表现的图标
1.css中的fontawesome.min.css是存放css样式的
2.fonts中存放着具体的字体
3.实现通过class中的样式引用

--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -17,6 +17,9 @@
 		href="css/font-awesome.min.css"
 		rel="stylesheet"></link>
 	<link
+		href="css/font-open-sans.css"
+		rel="stylesheet"></link>
+	<link
 		href="css/style.css"
 		rel="stylesheet"></link>
 	<link
