--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -4,28 +4,18 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<meta charset="utf-8"/>
-<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Login</title>
-	
-	<link
-		href="css/bootstrap.min.css"
-		rel="stylesheet"></link>
-	<link
-		href="css/font-awesome.min.css"
-		rel="stylesheet"></link>
-	<link
-		href="css/font-open-sans.css"
-		rel="stylesheet"></link>
-	<link
-		href="css/style.css"
-		rel="stylesheet"></link>
-	<link
-		href="css/style-responsive.css"
-		rel="stylesheet"></link>
-	<link href="css/css" rel="stylesheet" type="text/css"/> 
+
+	<link href="css/bootstrap.min.css" rel="stylesheet"></link>
+	<link href="css/font-awesome.min.css" rel="stylesheet"></link>
+	<link href="css/font-open-sans.css" rel="stylesheet"></link>
+	<link href="css/style.css" rel="stylesheet"></link>
+	<link href="css/style-responsive.css" rel="stylesheet"></link>
+	<link href="css/css" rel="stylesheet" type="text/css" />
 </h:head>
 <h:body>
 	<div class="login-container">
@@ -60,20 +50,28 @@
 							</div>
 						</div>
 						<div class="foot">
-							<span  class="btn btn-default"><h:commandLink
-									id="zhuche" value="注册" action="register">
+							<span class="btn btn-default"><h:commandLink id="zhuche"
+									value="注册" action="register">
 								</h:commandLink></span>
 							<h:commandButton type="submit" data-dismiss="modal"
-								class="btn btn-primary" action="#{userBean.VerifyPassword()}" value="登陆"></h:commandButton>
+								class="btn btn-primary" action="#{userBean.VerifyPassword()}"
+								value="登陆"></h:commandButton>
 						</div>
 					</h:form>
 				</div>
 			</div>
 			<div class="text-center out-links">
 				<a
-					href="./Responsive Admin Template_files/Responsive Admin Template.htm">©  Copyright ZhangHongfei 2014. </a>
+					href="./Responsive Admin Template_files/Responsive Admin Template.htm">©
+					Copyright ZhangHongfei 2014. </a>
 			</div>
 		</div>
 	</div>
+	<script src="js/jquery-2.0.2.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/accordion.js"></script>
+	<script src="js/common-script.js"></script>
+	<script src="js/jquery.nicescroll.js"></script>
 </h:body>
 </html>
