【样式修改】修改新用户的注册页面
1.新用户的注册页
2.用户已存在，用户不存在的情况。
3.Email=id
4.姓氏=home
5.名字=school
6.男女、我同意等无意义
7.去除了massage的输出

--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -8,7 +8,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Login</title>
+	<title>登陆</title>
 
 	<link href="css/bootstrap.min.css" rel="stylesheet"></link>
 	<link href="css/font-awesome.min.css" rel="stylesheet"></link>
@@ -22,7 +22,7 @@
 		<div class="middle-login">
 			<div class="block-web">
 				<div class="head">
-					<h3 class="text-center">管理中心</h3>
+					<h3 class="text-center">会员登陆</h3>
 				</div>
 				<div style="background: #fff;">
 					<h:form
